[project]
name = "spot-optimizer"
version = "1.1.0"
description = "AWS EC2 spot instance optimizer"
authors = [
    { name = "Shivam Bansal" },
]
readme = "README.md"
requires-python = ">=3.9"
keywords = ["aws", "ec2", "spot", "optimizer"]
dependencies = [
    "appdirs>=1.4.4",
    "diskcache>=5.6.3",
    "duckdb>=1.3.2",
    "pandas>=2.3.1",
    "requests>=2.32.4",
]

[project.urls]
Repository = "https://github.com/shivamb25/spot-optimizer"

[project.scripts]
spot-optimizer = "spot_optimizer.cli:main"

[project.optional-dependencies]
dev = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
include = [
    "spot_optimizer/resources/*.json"
]

[dependency-groups]
dev = [
    "bs4>=0.0.2",
    "pytest>=8.4.1",
    "pytest-cov>=6.2.1",
    "types-requests>=2.32.4.20250611",
]
